--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "Lokesh",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
+    "@grpc/proto-loader": "^0.6.5",
     "google-protobuf": "^3.18.1"
+  },
+  "devDependencies": {
+    "grpc-tools": "^1.11.2",
+    "grpc_tools_node_protoc_ts": "^5.3.2"
   }
 }
